CAGRID-711: don't need endorsed jars in the gaards-ui any more either
git-svn-id: https://ncisvn.nci.nih.gov/svn/cagrid/trunk/cagrid/Software/core@18012 dd7b0c16-3c94-4492-92de-414b6a06f0b1