@@ -29,7 +29,6 @@ GSBT - Globus Service Build Tools
 	<property name="configuration.dir" value="resources/configuration" />
 
 	<property name="ext.dir" location="${basedir}/ext" />
-	<property name="endorsed.lib.dir" location="${ext.dir}/dependencies/endorsed/jars" />
 	<property name="ext.lib.dir" location="${ext.dir}/dependencies/impl/jars" />
 
 	<property name="etc.dir" value="etc" />
@@ -234,13 +233,11 @@ GSBT - Globus Service Build Tools
 			<then>
 				<echo message="Configured for Proxy" />
 				<java classname="${runtime.mainclass}" classpathref="run.classpath" fork="yes">
-					<jvmarg value="-Djava.endorsed.dirs=${endorsed.lib.dir}" />
 					<syspropertyset refId="system.properties" />
 				</java>
 			</then>
 			<else>
 				<java classname="${runtime.mainclass}" classpathref="run.classpath" fork="yes">
-					<jvmarg value="-Djava.endorsed.dirs=${endorsed.lib.dir}" />
 				</java>
 			</else>
 		</if>
@@ -263,12 +260,6 @@ GSBT - Globus Service Build Tools
 				<include name="*.jar" />
 			</fileset>
 		</copy>
-		<!-- endorsed libraries -->
-		<copy overwrite="true" todir="${introduce.extensions.dir}/endorsed">
-			<fileset dir="${endorsed.lib.dir}">
-				<include name="*.jar" />
-			</fileset>
-		</copy>
 		<!-- gui configuration -->
 		<copy overwrite="true" todir="${introduce.extensions.dir}/cagrid_gaards_ui">
 			<fileset dir="ext/target_grid">
@@ -280,14 +271,8 @@ GSBT - Globus Service Build Tools
 	
 	<target name="standalone" description="Creates a zip containing all files needed to run the GAARDS UI without the rest of the caGrid software.">
 		<mkdir dir="${build.dir}/gaards/lib" />
-		<mkdir dir="${build.dir}/gaards/endorsed" />
 		<copy todir="${build.dir}/gaards/lib">
 			<fileset dir="ext/dependencies/impl/jars">
-				<include name="*.jar" />
-			</fileset>
-		</copy>
-		<copy todir="${build.dir}/gaards/endorsed">
-			<fileset dir="${endorsed.lib.dir}">
 				<include name="*.jar" />
 			</fileset>
 		</copy>
